--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-v4.7.5
+v4.7.5.1
 
-- Re-handle invalid case animation keyframe. Succeed gracefully rather than failing
-- Add `query.controller_speed` Molang Query.
-- Remove the forRemoval deprecations in GeoModel for `getTextureResource` and `getModelResource`
+- Remove frame extrapolation from spline lerping
