--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,16 @@
-v4.7
+v4.7.1
 
-- Added `getTriggeredAnimation` to AnimationController
-- Added stop triggered animation functionality to all geo animatables
-- Change crashes to warnings for unsupported model format versions for geo models
-- Add support for rotated face UVs
-- Added a fallback hook for animations - you can now declare multiple animation files in a single GeoModel to look for animations (for polymorphic/modular animatables)
-- Fixed entity velocity being determined mostly from x-coordinate velocity
-- Added GeoRenderer context to GeoModel getters for context-specific handling
+- Added native support for catmull-rom (smooth) easings for bedrock-style animation jsons (Thanks for the initial work Zigy)
+- Default boneResetTime to 5-ticks, and auto-complete the reset if the tick time is 0. This prevents unavoidable partial-tick bone resets
+- Removed the deprecation markers on the model/texture getters in GeoModel
+- Reorient bone visibility a bit to support mods that modify part visibility prior to rendering
+- Fix zero-time reset of bones not being zero-time
+- Introduced an identity-based lookup for synced singleton animatables, to hopefully eliminate class-duplication collisions
+- Synced animatable items no longer prevent stacking with each other
+- Fixed middle-clicking on synced animatable items causing them to conflict when using triggered animations or synced data (#681)
+- Bones that use animations to do a full rotation should now no longer counter-rotate when resetting, allowing for cleaner rotation animations
+- Added `stopTriggeredAnimation` to `SingletonGeoAnimatable`
+- Added triggerArmorAnim for triggering armor animations (#433)
+- Cleaned up the javadoc for EasingType
+- Animated textures now support glowmasks (#456)
+- Add `query.controller_speed` Molang query
