--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
-v4.7.1.1
+v4.7.1.2
 
-- Fix some bad stack comparisons causing some lag/issues (#689)
+Fabric:
+- Move Redirect mixins to WrapOperations to prevent collisions with other mods
+
+Forge:
+- Rollback the stackability change to itemstacks from 4.7.1 as Forge does not have MixinExtras, and adding it causes
+occasional conflict resolution issues
