--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v4.8.4
+v4.8.5
 
-- Fix crash NeoForge introduced in .84
+- Fix stopTriggeredSingletonAnim actually starting a triggered anim instead of stopping it
