--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v4.7.2
+v4.7.3
 
-- Fixed crashing mixin on Forge
+- Fix stopTriggeredSingletonAnim actually starting a triggered anim instead of stopping it
