--- a/src/main/resources/assets/riftlib/lang/en_us.lang
+++ b/src/main/resources/assets/riftlib/lang/en_us.lang
@@ -12,4 +12,5 @@ tile.riftlib.fertilizerblock.name=Fertilizer
 entity.dragon.name=Red Dragon
 entity.flying_pufferfish.name=Flying Pufferfish
 
+ui.hovered_tool=%s level %s
 ui.open_in_jei=Click to open in JEI
