--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
-v4.7.3
+v4.7.4
 
-- Adjusted the dummy ID lookup for GeoArmorRenderer to improve microperformance
-- Removed an unnecessary exception wrapper to improve microperformance for GeoItems
-- Actually fixed armour syncing animations between some instances[#741]
+- Properly handle exception when attempting to glowmask an animated texture
+- Changed DefaultedEntityGeoModel to use a nullable bone name input for its head turning instead of a flat boolean (#753)
+- Fixed some specific bedrock-format animations failing to parse if exported on newer versions of Blockbench
