--- a/changelog.txt
+++ b/changelog.txt
@@ -1,23 +1,3 @@
-v4.8
+v4.8.1
 
-- Added "Stateless" animatables. These are an alternate way of handling animations for GeckoLib animatables.
-  - See: https://github.com/bernie-g/geckolib/wiki/Stateless-Animatable-Handling-(Geckolib4)
-  - Added:
-    - `StatelessGeoBlockEntity`
-    - `StatelessGeoEntity`
-    - `StatelessGeoObject`
-    - `StatelessGeoReplacedEntity`
-    - `StatelessGeoSingletonAnimatable`
-    - `StatelessAnimationController`
-- Added `NetworkUtil`, adding some network helpers for writing/reading RawAnimations
-- Added `RawAnimation#getStageCount`
-- Added `AnimationController#getStateHandler`
-- Added `DefaultAnimations#triggerOnlyController` for creating a controller specifically for arbitrary triggered animations
-- Added `DefaultAnimations#genericWalkFlyIdleController`
-- Added `attack.punch` DefaultAnimation constant
-- Added `misc.idle.flying` DefaultAnimation constant
-- Added `move.dive` DefaultAnimation constant
-- Added a constructor overload for various GeckoLib renderers that takes the item directly and creates a defaulted instance using the object's registered ID for quick and easy handling
-    - E.G. `new GeoEntityRenderer(ModEntities.MY_ENTITY);`
-- Made the Forge network connection optional, allowing for client-only GeckoLib mods to be made if wanted
-- Fixed GeoReplacedEntities not taking partialTick into account (#761)
+- Revert Forge parity change - players aren't as up to date on Forge 1.20.1 as I expected
